@@ -1,0 +1,7 @@
+package org.jqassistant.plugin.spring.test.set.components.security;
+
+import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
+
+@EnableWebFluxSecurity
+public class EnableWebFluxSecurityComponent {
+}
