@@ -1,0 +1,7 @@
+package org.jqassistant.plugin.spring.test.set.components.security;
+
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+
+@EnableWebSecurity
+public class EnableWebSecurityComponent {
+}
